--- a/Client/Pages/Login.razor
+++ b/Client/Pages/Login.razor
@@ -18,7 +18,7 @@
         </div>
         <div class="mb-3">
             <label>Password</label>
-            <input @bind="loginRequest.Password" class="form-control" placeholder="Password" />
+            <input @bind="loginRequest.Password" type="password" class="form-control" placeholder="Password" />
         </div>
         <div class="mb-3 d-grid gap-2">
             <button @onclick="Authenticate" class="btn btn-primary">Login</button>
