--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        <AuthorizeView Roles="Administrator, User">
+        <AuthorizeView Roles="Admin, User">
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="counter">
@@ -28,6 +28,15 @@
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="fetchdata">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
+        <AuthorizeView Roles="Admin">
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="userslist">
+                        <span class="oi oi-people" aria-hidden="true"></span> List of users
                     </NavLink>
                 </div>
             </Authorized>
