--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,5 +8,6 @@
 @using Microsoft.JSInterop
 @using WebApplicationStock.Client
 @using WebApplicationStock.Client.Shared
+@using WebApplicationStock.Client.Services.PersonService
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
