Adaugat task de post si delete

--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -1,5 +1,5 @@
 ﻿@page "/counter"
-@attribute [Authorize(Roles = "Admin,User")]
+@attribute [Authorize(Roles = "Admin,Account")]
 
 <PageTitle>Counter</PageTitle>
 
